fixed footer not on bottom when page too small

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,12 @@ html, body {
     pointer-events: auto;*/
     font-family: Arial, Helvetica, sans-serif;
 }
+main {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
+}
 header {
     margin-bottom: 20px;
 }
@@ -25,6 +31,7 @@ footer {
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
     width: 100%;
+    margin-top: 100px;
 
     font: bold 16px sans-serif;
     /*font-weight: bold; 
